--- a/aboutus.html
+++ b/aboutus.html
@@ -1,453 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
+    <meta charset="UTF-8">
+    <meta name="description" content="Discover Bit by Bit Coding—empowering aspiring coders to unlock their potential. Our courses and mentorship foster creativity, build essential skills, and inspire!">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/styles.css">
     <title>About Us</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-    body {
-        font-family: 'Arial', sans-serif;
-        background-color: #E3F2FD; /* Softer background for readability */
-        margin: 0;
-        padding: 40px 20px;
-        display: grid;
-        grid-template-areas:
-            "header"
-            "team"
-            "mission"
-            "story"
-            "contact";
-        justify-content: center;
-        align-items: center;
-    }
-
-    .logo {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 20px;
-        border-radius: 50%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        padding-left: 10px;
-        padding-top: 10px;
-    }
-
-    .social-icon {
-        width: 50px;
-        height: 50px;
-        margin: 10px;
-    }
-
-    .navbar-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 20px;
-    }
-    .navbar {
-        background-color: #4A7D96;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .navbar-brand {
-        color: white;
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
-
-    .navbar-links {
-        display: flex;
-    }
-
-    .navbar-link {
-        color: white;
-        margin-left: 10px;
-        text-decoration: none;
-    }
-
-    .container {
-        background: white;
-        padding: 30px;
-        border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        text-align: left;
-        width: 90%;
-        max-width: 600px;
-    }
-
-    h1 {
-        color: #4A7D96;
-        font-size: 2rem;
-        text-align: center;
-    }
-
-    h2 {
-        color: #356074;
-        font-size: 1.5rem;
-        margin-top: 20px;
-    }
-
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    li {
-        background: #A1C9DF;
-        color: #333;
-        padding: 10px;
-        margin: 5px 0;
-        border-radius: 8px;
-        font-size: 1rem;
-    }
-
-    .button-container {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    button {
-        background-color: #4A7D96;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 10px;
-        font-size: 1rem;
-        font-weight: bold;
-        border: none;
-        cursor: pointer;
-        transition: background 0.3s ease;
-    }
-
-    button:hover {
-        background-color: #356074;
-    }
-    footer {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        padding: 10px;
-        width: 100%;
-    }
-
-    header {
-        grid-area: header;
-    }
-
-    main {
-        display: grid;
-        grid-template-areas:
-            "team"
-            "mission"
-            "story"
-            "contact";
-        grid-gap: 20px;
-    }
-
-    section {
-        /*background: white;
-        border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        text-align: left;*/
-        padding: 30px;
-    }
-
-    .profile {
-        background: white;
-        border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        display: grid;
-        /*grid-template-areas: "image" "title" "name" "bio";*/
-        grid-template-rows: auto auto;
-        grid-template-columns: 1fr 1fr 1fr;
-        place-items: center;
-        justify-content: center;
-        /*grid-template-columns: 15% 85%;
-        grid-gap: 20px;*/
-        text-align: center;
-        padding: 10px 10px 10px 10px;
-    }
-
-    .profile img {
-        /*grid-area: image;*/
-        grid-row: 1 / 2;
-        grid-column: 2;
-        display: flex;
-        border-radius: 50%;
-        display: flex;
-        max-width: 150%;
-        /*max-width: 60%;
-        height: 60%;
-        border-radius: 50%;*/
-    }
-    
-    .profile-details {
-        grid-area: details;
-        grid-row: 2 / 3;
-        grid-column: 1 / 4;
-        text-align: center;
-        padding-left: 20px;
-    }
-
-    .profile h3 {
-        grid-area: title;
-        margin-bottom: 0;
-    }
-
-    .profile h4 {
-        grid-area: name;
-        margin-bottom: 0;
-    }
-
-    .profile p {
-        grid-area: bio;
-        margin-top: 10px;
-    }
-
-    .profile p:last-child {
-        margin-bottom: 0;
-    }
-
-    .team {
-        grid-area: team;
-    }
-
-    .bod {        
-        display: grid;
-        grid-template-columns: 15% 30% 10% 30% 15%;
-    }
-
-    .directors {        
-        margin-top: 30px;
-        display: grid;
-        grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-    }
-
-    .coaches {        
-        margin-top: 30px;
-        display: grid;
-        grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-    }
-
-    .judges {        
-        margin-top: 30px;
-        display: grid;
-        grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-    }
-
-    .mission {
-        grid-area: mission;
-        background: white;
-        border-radius: 15px;
-        margin-left: 6.25%;
-        margin-right: 6.25%;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .story {
-        grid-area: story;
-        background: white;
-        border-radius: 15px;
-        margin-left: 6.25%;
-        margin-right: 6.25%;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .contact {
-        grid-area: contact;
-        background: white;
-        border-radius: 15px;
-        margin-left: 6.25%;
-        margin-right: 6.25%;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    @media only screen and (max-width: 600px) {
-        body {
-            padding: 20px 10px;
-        }
-
-        .container {
-            width: 100%;
-            padding: 20px;
-        }
-
-        /*.profile img {
-            max-width: 100px;
-        }*/
-
-        .profile-details {
-            padding-left: 10px;
-        }
-
-        .navbar {
-            flex-direction: column;
-            align-items: flex-start;
-        }
-
-        .navbar-links {
-            flex-direction: column;
-            width: 100%;
-        }
-
-        .navbar-link {
-            margin-left: 0;
-            margin-top: 10px;
-        }
-
-        .bod, .directors, .coaches, .judges {
-            grid-template-columns: 1fr;
-        }
-
-        .bod-item-1 {
-            grid-column: 1;
-        }
-
-        .bod-item-2 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .dir-item-1 {
-            grid-column: 1;
-        }
-
-        .dir-item-2 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .dir-item-3 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .coaches-item-1 {
-            grid-column: 1;
-        }
-
-        .coaches-item-2 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .coaches-item-3 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .judges-item-1 {
-            grid-column: 1;
-        }
-
-        .judges-item-2 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-
-        .judges-item-3 {
-            grid-column: 1;
-            margin-top: 20px;
-        }
-    }
-
-    @media only screen and (min-width: 600px) {
-        body {
-            padding: 40px 20px;
-        }
-
-        .container {
-            width: 90%;
-            padding: 30px;
-        }
-
-        /*.profile img {
-            max-width: 200px;
-        }*/
-
-        .profile-details {
-            padding-left: 20px;
-        }
-
-        .navbar {
-            flex-direction: row;
-            align-items: center;
-        }
-
-        .navbar-links {
-            flex-direction: row;
-        }
-
-        .navbar-link {
-            margin-left: 10px;
-        }
-
-        .bod {
-            grid-template-columns: 15% 30% 10% 30% 15%;
-        }
-
-        .bod-item-1 {
-            grid-column: 2;
-        }
-
-        .bod-item-2 {
-            grid-column: 4;
-        }
-
-        .directors {
-            grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-        }
-
-        .dir-item-1 {
-            grid-column: 2;
-        }
-
-        .dir-item-2 {
-            grid-column: 4;
-        }
-
-        .dir-item-3 {
-            grid-column: 6;
-        }
-
-        .coaches {
-            grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-        }
-
-        .coaches-item-1 {
-            grid-column: 2;
-        }
-
-        .coaches-item-2 {
-            grid-column: 4;
-        }
-
-        .coaches-item-3 {
-            grid-column: 6;
-        }
-
-        .judges {
-            grid-template-columns: 6.25% 25% 6.25% 25% 6.25% 25% 6.25%;
-        }
-
-        .judges-item-1 {
-            grid-column: 2;
-        }
-
-        .judges-item-2 {
-            grid-column: 4;
-        }
-
-        .judges-item-3 {
-            grid-column: 6;
-        }
-    }
-    </style>
 </head>
 <body>
     <div>
@@ -456,23 +15,20 @@
         </a>
     </div>
     <div class="navbar-container">
-    <div class="navbar">
-        <div class="navbar-links">
-            <a class="navbar-link" href="index.html">Home</a>
-            <a class="navbar-link" href="courses.html">Courses</a>
-            <a class="navbar-link" href="hackathons.html">Hackathons</a>
-            <a class="navbar-link" href="workwithus.html">Work With Us</a>
-            <a class="navbar-link" href="aboutus.html">About Us</a>
-            <a class="navbar-link" href="faq.html">FAQ</a>
+        <div class="navbar">
+            <div class="navbar-links">
+                <a class="navbar-link" href="index.html">Home</a>
+                <a class="navbar-link" href="courses.html">Courses</a>
+                <a class="navbar-link" href="hackathons.html">Hackathons</a>
+                <a class="navbar-link" href="workwithus.html">Work With Us</a>
+                <a class="navbar-link" href="aboutus.html">About Us</a>
+                <a class="navbar-link" href="faq.html">FAQ</a>
+            </div>
         </div>
     </div>
-</div>
-    <!--header>
-        <h1>About Us</h1>
-    </header-->
     <main>
         <section class="team">
-            <h2 style="text-align: center;">Board of Directors</h2>
+            <h2>Board of Directors</h2>
             <div class="bod">
                <div class="profile bod-item-1">
                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
@@ -491,7 +47,7 @@
                    </div>
                </div>
             </div>
-            <!--<h2 style="text-align: center;">Directors</h2>
+            <!--<h2>Directors</h2>
             <div class="directors">
                 <div class="profile dir-item-1">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
@@ -515,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <h2 style="text-align: center;">Coaches</h2>
+            <h2>Coaches</h2>
             <div class="coaches">
                 <div class="profile coaches-item-1">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
@@ -562,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <h2 style="text-align: center;">Judges</h2>
+            <h2>Judges</h2>
             <div class="coaches">
                 <div class="profile judges-item-1">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
