--- a/faq.html
+++ b/faq.html
@@ -1,91 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <!--link rel="stylesheet" href="styles.css"-->
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #A1C9DF;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-        }
-
-        .faq {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            font-size: 32px;
-            color: #333333;
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            font-size: 24px;
-            color: #333333;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 16px;
-            color: #666666;
-            margin-bottom: 20px;
-        }
-
-        .question {
-            margin-bottom: 30px;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #4A7D96;
-            padding: 10px 20px;
-            color: white;
-        }
-        .logo {
-            width: 100px;
-            height: 100px;
-            margin-bottom: 20px;
-            border-radius: 50%;border-radius: 50%;
-            position: absolute; top: 0; left: 0;
-            padding-left: 10px;
-            padding-top: 10px;
-        }
-        .navbar-brand {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        .navbar-links {
-            display: flex;
-        }
-        .navbar-link {
-            margin-left: 10px;
-            color: white;
-            text-decoration: none;
-        }
-        .navbar-link:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
+    <meta charset="UTF-8">
+    <meta name="description" content="Dive into our FAQ at Bit by Bit Coding to discover answers to your questions about courses, resources, and more!">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/styles.css">
+    <title>FAQ</title>
 </head>
 <body>
     <div>
         <a href="index.html">
             <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
         </a>
-    </div>
     </div>
     <div class="navbar">
         <div class="navbar-links">
