--- a/hackathons.html
+++ b/hackathons.html
@@ -3,93 +3,10 @@
 <head>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
     <meta charset="UTF-8">
+    <meta name="description" content="Unleash your creativity at Bit by Bit Coding's hackathons! Team up with passionate coders, tackle challenges, and elevate your skills. Join us for an inspiring coding journey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/styles.css">
     <title>Hackathons - Bit by Bit</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #A1C9DF;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-        }
-        .logo {
-            width: 100px;
-            height: 100px;
-            margin-bottom: 20px;
-            border-radius: 50%;border-radius: 50%;
-            position: absolute; top: 0; left: 0;
-            padding-left: 10px;
-            padding-top: 10px;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 90%;
-            max-width: 600px;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-gap: 20px;
-            padding-top: 60px;
-        }
-        .current-hackathons {
-            background: white;
-        }
-        .upcoming-hackathons {
-            background: white;
-        }
-        h1 {
-            color: #4A7D96;
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: left;
-        }
-        li {
-            background: #4A7D96;
-            color: white;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 10px;
-            font-size: 1rem;
-        }
-        .nested-list {
-            background: #E3F2FD;
-            color: #333;
-            padding: 8px;
-            margin-top: 5px;
-            border-radius: 8px;
-            font-size: 0.9rem;
-        }
-        .button {
-            background-color: #4A7D96;
-            color: white;
-            padding: 12px 20px;
-            border-radius: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
-            transition: background 0.3s ease;
-            border: none;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #356074;
-        }
-    </style>
 </head>
 <body>
     <div>
@@ -107,34 +24,9 @@
             <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
-    <style>
-        .navbar {
-            background-color: #4A7D96;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            color: white;
-        }
-        .navbar-brand {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        .navbar-links {
-            display: flex;
-        }
-        .navbar-link {
-            color: white;
-            text-decoration: none;
-            margin-left: 10px;
-        }
-        .navbar-link:hover {
-            text-decoration: underline;
-        }
-    </style>
-    <div class="grid-container">
+    <div class="grid-container grid-container-hackathon">
         <!-- Current Hackathons -->
-        <div class="container current-hackathons">
+        <div class="container">
             <h1>Current Hackathons</h1>
             <h2>Web Development Hackathons</h2>
             <ul>
@@ -152,7 +44,7 @@
         </div>
 
         <!-- Upcoming Hackathons -->
-        <div class="container upcoming-hackathons">
+        <div class="container">
             <h1>Upcoming Hackathons</h1>
             <h2>Web Development Hackathons</h2>
             <ul>
