--- a/index.html
+++ b/index.html
@@ -3,35 +3,34 @@
 <head>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
     <meta charset="UTF-8">
+    <meta name="description" content="Bit by Bit Coding empowers users with interactive coding courses for all skill levels. Through hands-on projects and real-world applications, we make programming accessible, engaging, and impactful.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/index.css">
+    <link rel="stylesheet" href="content/wavyline.css">
     <title>Bit by Bit Coding</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="wavyline.css">
 </head>
 <body>
-<div class="wave-container"> 
-    <div>
-        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+    <div class="wave-container"> 
+        <div>
+            <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        </div>
+        <div class="container">
+            <h1>Welcome to Bit by Bit</h1>
+            <p>Igniting interest in coding worldwide.</p>
+            <a href="courses.html" class="button">Courses</a>
+            <a href="hackathons.html" class="button">Hackathons</a>
+            <a href="workwithus.html" class="button">Work With Us</a>
+            <a href="aboutus.html" class="button">About Us</a>
+            <a href="faq.html" class="button">FAQ</a>
+        </div>
+        <footer>
+            <h5>Questions? Contact us!</h5>
+            <p>bitbybitcoding49@gmail.com</p>
+            <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
+                <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
+            </a>
+        </footer>
     </div>
-    <div class="container">
-        <h1>Welcome to Bit by Bit</h1>
-        <p>Igniting interest in coding worldwide.</p>
-        <a href="courses.html" class="button">Courses</a>
-        <a href="hackathons.html" class="button">Hackathons</a>
-        <a href="workwithus.html" class="button">Work With Us</a>
-        <a href="aboutus.html" class="button">About Us</a>
-        <a href="faq.html" class="button">FAQ</a>
-    </div>
-    <footer>
-        <h5>Questions? Contact us!</h5>
-        <p>bitbybitcoding49@gmail.com</p>
-        <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
-            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
-        </a>
-    </footer>
-</div>
-<div style="height: 50vh;background-color: #A1C9DF;">
-
-</div>
+    <div class="bottom"></div>
 </body>
 </html>
