--- a/workwithus.html
+++ b/workwithus.html
@@ -1,84 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
     <meta charset="UTF-8">
+    <meta name="description" content="Join the Bit by Bit Coding team! Explore leadership opportunities in coaching, judging, social media, and outreach!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/styles.css">
     <title>Volunteer Sign-up</title>
 </head>
-<body>
-    <style>
-    body {
-        font-family: 'Arial', sans-serif;
-        background-color: #E3F2FD; /* Softer background for readability */
-        margin: 0;
-        padding: 40px 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .logo {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 20px;
-        border-radius: 50%;border-radius: 50%;
-        position: absolute; top: 0; left: 0;
-        padding-left: 10px;
-        padding-top: 10px;
-    }
-
-    .navbar {
-        background-color: #4A7D96;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .navbar-brand {
-        color: white;
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
-
-    .navbar-links {
-        display: flex;
-    }
-
-    .navbar-link {
-        color: white;
-        margin-left: 10px;
-        text-decoration: none;
-    }
-
-    .container {
-        background: white;
-        padding: 30px;
-        border-radius: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        text-align: left;
-        width: 90%;
-        max-width: 600px;
-    }
-
-    h1 {
-        color: #4A7D96;
-        font-size: 2rem;
-        text-align: center;
-    }
-
-    h2 {
-        color: #356074;
-        font-size: 1.5rem;
-        margin-top: 20px;
-    }
-
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
+<body class="body-volunteers">
+    <!--style>
 
     li {
         background: #A1C9DF;
@@ -89,28 +20,7 @@
         font-size: 1rem;
     }
 
-    .button-container {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    button {
-        background-color: #4A7D96;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 10px;
-        font-size: 1rem;
-        font-weight: bold;
-        border: none;
-        cursor: pointer;
-        transition: background 0.3s ease;
-    }
-
-    button:hover {
-        background-color: #356074;
-    }
-
-    </style>
+    </style-->
     <div>
         <a href="index.html">
             <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
@@ -144,7 +54,7 @@
         <li>Director of Social Media</li>
     </ul>
 
-    <button onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up</button>
+    <button class="button" onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up</button>
     <script>
         function redirectToGoogleForm() {
             window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing";
