--- a/courses.html
+++ b/courses.html
@@ -3,84 +3,10 @@
 <head>
     <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
     <meta charset="UTF-8">
+    <meta name="description" content="Unlock your potential with engaging coding courses that empower you to create apps and websites! Enjoy hands-on lessons and coaching to launch your coding journey today!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="content/styles.css">
     <title>Courses - Bit by Bit</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #A1C9DF;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 90%;
-            max-width: 600px;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-gap: 20px;
-            padding-top: 60px;
-        }
-        .current-classes {
-            background: white;
-        }
-        .upcoming-classes {
-            background: white;
-        }
-        h1 {
-            color: #4A7D96;
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: left;
-        }
-        li {
-            background: #4A7D96;
-            color: white;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 10px;
-            font-size: 1rem;
-        }
-        .nested-list {
-            background: #E3F2FD;
-            color: #333;
-            padding: 8px;
-            margin-top: 5px;
-            border-radius: 8px;
-            font-size: 0.9rem;
-        }
-        .button {
-            background-color: #4A7D96;
-            color: white;
-            padding: 12px 20px;
-            border-radius: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
-            transition: background 0.3s ease;
-            border: none;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #356074;
-        }
-    </style>
 </head>
 <body>
     <div>
@@ -98,43 +24,9 @@
             <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
-    <style>
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #4A7D96;
-            padding: 10px 20px;
-            color: white;
-        }
-        .logo {
-            width: 100px;
-            height: 100px;
-            margin-bottom: 20px;
-            border-radius: 50%;border-radius: 50%;
-            position: absolute; top: 0; left: 0;
-            padding-left: 10px;
-            padding-top: 10px;
-        }
-        .navbar-brand {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        .navbar-links {
-            display: flex;
-        }
-        .navbar-link {
-            margin-left: 10px;
-            color: white;
-            text-decoration: none;
-        }
-        .navbar-link:hover {
-            text-decoration: underline;
-        }
-    </style>
-    <div class="grid-container">
+    <div class="grid-container grid-container-courses">
         <!-- Current Classes -->
-        <div class="container current-classes">
+        <div class="container">
             <h1>Current Classes</h1>
             <p>All prep courses run for 10 weeks, meeting via Zoom on 2/15/2025, 2/22/2025, 3/1/2025, 3/8/2025, 3/15/2025, 3/22/2025, 3/29/2025, 4/5/2025, 4/12/2025, & 4/19/2025</p>
             <h2>Web Development Hackathon Prep</h2>
@@ -165,7 +57,7 @@
         </div>
 
         <!-- Upcoming Classes -->
-        <div class="container upcoming-classes">
+        <div class="container">
             <h1>Upcoming Classes</h1>
             <p>All prep courses run for 4 weeks, meeting via Zoom on 7/5/2025, 7/12/2025, 7/19/2025, & 7/26/2025</p>
             <h2>Web Development Hackathon Prep</h2>
