--- a/workwithus.html
+++ b/workwithus.html
@@ -50,8 +50,8 @@
     <ul>
         <li>Coach</li>
         <li>Judge</li>
-        <li>Director of Outreach</li>
-        <li>Director of Social Media</li>
+        <!--<li>Director of Outreach</li>
+        <li>Director of Social Media</li>-->
     </ul>
 
     <button class="button" onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up</button>
