--- a/workwithus.html
+++ b/workwithus.html
@@ -43,7 +43,7 @@
     <ul>
         <li>Must be at least 14 years old</li>
         <li>Pass a background check</li>
-        <li>Have background knowledge in HTML, CSS, and JavaScript</li>
+        <li>No background experience necessary</li>
     </ul>
     
     <h2>Available Roles:</h2>
