Added Great Nonprofits and made some minor changes

--- a/hackathons.html
+++ b/hackathons.html
@@ -63,8 +63,7 @@
     </div>
     <script>
         function register() {
-            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScrAQ5mhmRqgzEUD47Qy4mBXhCfNv21jbNUxyeSGflAiClJ8A/viewform?usp=sharing";
-            alert("Redirecting to the registration page.");
+            window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfJNMaleVGdWsgeikMl2jUZK4qEa0ghphVqsAoSCTYBn4H6VA/viewform?usp=dialog";
         }
     </script>
     <!--<footer>
