--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
             <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
                 <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
             </a>
+            <script type="text/javascript">
+                gnp_url = 'bit-by-bit-coding-1';gnp_num = '4';
+           </script>
+           <script type="text/javascript" />
+           (function() {
+    document.write('<iframe src="https://greatnonprofits.org/badge/simple_' + gnp_num + '_new/' + gnp_url + '" width="135" height="172" frameborder="0" scrolling="no"></iframe>');
+}
+)()
+              </script>
+           <noscript> 
+              <a href="https://greatnonprofits.org/org/bit-by-bit-coding-1/?badge=1">
+                 <img alt="Review Bit by Bit Coding on Great Nonprofits" 
+                      title="Review Bit by Bit Coding on Great Nonprofits" 
+                      src="//cdn.greatnonprofits.org/images/great-nonprofits.gif?id=997664190"> 
+              </a>
+           </noscript>
         </footer>
     </div>
     <div class="bottom"></div>
