--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
         </div>
         <div class="question">
             <h2>Can I join without having previous experience and/or knowledge?</h2>
-            <p>Absolutely! Our coding organization welcomes beginners and provides a supportive learning environment. We offer classes designed to teach foundational coding skills, allowing you to learn at your own pace and build your knowledge from the ground up.</p>
+            <p>Absolutely! Our nonprofit coding organization welcomes beginners and provides a supportive learning environment. We offer classes designed to teach foundational coding skills, allowing you to learn at your own pace and build your knowledge from the ground up.</p>
         </div>
         <div class="question">
             <h2>Where is my meeting link for an online class?</h2>
