Updated great nonprofits

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            </script>
            <script type="text/javascript" />
            (function() {
-    document.write('<iframe src="https://greatnonprofits.org/badge/simple_' + gnp_num + '_new/' + gnp_url + '" width="135" height="172" frameborder="0" scrolling="no"></iframe>');
+    document.write('<iframe class="resp_iframe" src="https://greatnonprofits.org/badge/mini_' + gnp_num + '_new/' + gnp_url + '" width="124" height="72" frameborder="0" scrolling="no"></iframe>');
 }
 )()
               </script>
