--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
                         <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <h2>Coaches</h2>
             <div class="coaches">
                 <div class="profile coaches-item-1">
@@ -81,21 +81,21 @@
                     </div>
                 </div>
                 <div class="profile coaches-item-2">
+                    <img src="images/hannah_bang.jpeg" alt="Hannah Bang">
+                    <div class="profile-details">
+                        <h4>Hannah Bang</h4>
+                        <p>Hi everyone! My name is Hannah Bang and I’m a current Computer Science major at Northeastern University. I studied abroad in London last year but will return to the US this summer. In my free time, I love traveling, coding, and playing the Bassoon!</p>
+                    </div>
+                </div>
+                <!--div class="profile coaches-item-3">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
                         <h4>Victoria Glossip</h4>
                         <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                     </div>
-                </div>
-                <div class="profile coaches-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
+                </div-->
             </div>
-            <div class="coaches">
+            <!--div class="coaches">
                 <div class="profile coaches-item-1">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
@@ -117,54 +117,54 @@
                         <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
                     </div>
                 </div>
-            </div>
-            <h2>Judges</h2>
-            <div class="coaches">
-                <div class="profile judges-item-1">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
-                <div class="profile judges-item-2">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
-                <div class="profile judges-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="coaches">
-                <div class="profile judges-item-1">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
-                <div class="profile judges-item-2">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
-                <div class="profile judges-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
-                </div>
             </div-->
+            <h2>Judges</h2>
+            <div class="judges">
+                <div class="profile judges-item-1">
+                    <img src="images/agasaf_amirjanov.png" alt="Agasaf Amirjanov">
+                    <div class="profile-details">
+                        <h4>Agasaf Amirjanov</h4>
+                        <p>Agasaf Amirjanov is a frontend developer and Artificial Intelligence student with experience in React, TypeScript, JavaScript, and Python. He is passionate about computer science education, innovation, and creating meaningful web applications. Through his role as a judge, Agasaf hopes to support young programmers and contribute to a more inclusive tech community.</p>
+                    </div>
+                </div><!--
+                <div class="profile judges-item-2">
+                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <div class="profile-details">
+                        <h4>Victoria Glossip</h4>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                    </div>
+                </div>
+                <div class="profile judges-item-3">
+                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <div class="profile-details">
+                        <h4>Victoria Glossip</h4>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="coaches">
+                <div class="profile judges-item-1">
+                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <div class="profile-details">
+                        <h4>Victoria Glossip</h4>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                    </div>
+                </div>
+                <div class="profile judges-item-2">
+                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <div class="profile-details">
+                        <h4>Victoria Glossip</h4>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                    </div>
+                </div>
+                <div class="profile judges-item-3">
+                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                    <div class="profile-details">
+                        <h4>Victoria Glossip</h4>
+                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                    </div>
+                </div>-->
+            </div>
         </section>
 
         <section class="mission">
