Added Hamza as a coach

--- a/aboutus.html
+++ b/aboutus.html
@@ -87,13 +87,13 @@
                         <p>Hi everyone! My name is Hannah Bang and I’m a current Computer Science major at Northeastern University. I studied abroad in London last year but will return to the US this summer. In my free time, I love traveling, coding, and playing the Bassoon!</p>
                     </div>
                 </div>
-                <!--div class="profile coaches-item-3">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
+                <div class="profile coaches-item-3">
+                    <img src="images/hamza_rafeeq.jpeg" alt="Hamza Rafeeq">
                     <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
+                        <h4>Hamza Rafeeq</h4>
+                        <p>Hamza Rafeeq is a senior at Independence High School and will be studying Computer Science at the University of Texas at Dallas. He’s an Eagle Scout with a strong interest in tech, teaching, and giving back. He’s worked as a math instructor at Mathnasium and currently teaches Islamic studies at his local mosque. On the side, he builds web games for fun and posts them online. When he’s not coding or teaching, you’ll probably find him playing volleyball or caught up in a good book.</p>
                     </div>
-                </div-->
+                </div>
             </div>
             <!--div class="coaches">
                 <div class="profile coaches-item-1">
