--- a/aboutus.html
+++ b/aboutus.html
@@ -182,7 +182,7 @@
             <h2>Our Story</h2>
             <p>Bit by Bit Coding was founded with a simple but powerful goal: to make programming education accessible to all. Our journey began when our founder, an NCWIT Impact Award-winning advocate for computer science, saw firsthand the barriers that prevent students—especially young girls and international learners—from accessing quality coding education.</p>
             <p>Starting as a personal mission to bridge this gap, Bit by Bit Coding has grown into a global initiative. From authoring A Girl’s Blueprint to Building Websites to launching a YouTube channel and middle school clubs, our founder has worked tirelessly to empower the next generation of programmers.</p>
-            <p>Through our efforts, we’ve reached over 4,500 individuals, offering free coding lessons and hands-on experiences.</p>
+            <!--<p>Through our efforts, we’ve reached over 4,500 individuals, offering free coding lessons and hands-on experiences.</p>-->
             <p>With every lesson taught and every student empowered, we are proving that anyone, anywhere, can learn to code— bit by bit.</p>
         </section>
 
