Added Taylor as a judge

--- a/aboutus.html
+++ b/aboutus.html
@@ -120,21 +120,23 @@
             </div-->
             <h2>Judges</h2>
             <div class="judges">
+
                 <div class="profile judges-item-1">
                     <img src="images/agasaf_amirjanov.png" alt="Agasaf Amirjanov">
                     <div class="profile-details">
                         <h4>Agasaf Amirjanov</h4>
                         <p>Agasaf Amirjanov is a frontend developer and Artificial Intelligence student with experience in React, TypeScript, JavaScript, and Python. He is passionate about computer science education, innovation, and creating meaningful web applications. Through his role as a judge, Agasaf hopes to support young programmers and contribute to a more inclusive tech community.</p>
                     </div>
-                </div><!--
-                <div class="profile judges-item-2">
-                    <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
-                    <div class="profile-details">
-                        <h4>Victoria Glossip</h4>
-                        <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
-                    </div>
                 </div>
-                <div class="profile judges-item-3">
+                <div class="profile judges-item-2">
+                    <img src="images/taylor_eaton_headshot.jpeg" alt="Taylor Eaton">
+                   <div class="profile-details">
+                       <h3>Chief Executive Officer</h3>
+                       <h4>Taylor Eaton</h4>
+                       <p>Taylor first taught herself arduino code in high school for a science fair project. She holds certifications in artificial intelligence, and her coding languages include Python, Java, and Excel. Her goal is to increase opportunities for young programmers to achieve their own coding dreams and share her interest in coding with them.</p>
+                   </div>
+                </div>
+                <!--<div class="profile judges-item-3">
                     <img src="images/victoria_glossip.jpeg" alt="Victoria Glossip">
                     <div class="profile-details">
                         <h4>Victoria Glossip</h4>
